--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -1,4 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <device name="Android">
+    <item name="none">0</item>
+    <item name="screen.on">76</item>
+    <item name="screen.full">223</item>
+    <item name="bluetooth.active">101</item>
+    <item name="bluetooth.on">1</item>
+    <item name="wifi.on">1</item>
+    <item name="wifi.active">487</item>
+    <item name="wifi.scan">239</item>
+    <item name="dsp.audio">38</item>
+    <item name="dsp.video">250</item>
+    <item name="radio.active">126</item>
+    <item name="radio.scanning">23</item>
+    <item name="gps.on">1</item>
+    <array name="radio.on">
+        <value>8.3</value>
+        <value>8.3</value>
+    </array>
+    <array name="cpu.speeds">
+        <value>2649600</value>
+        <value>2572600</value>
+        <value>2496000</value>
+        <value>2457600</value>
+        <value>2265600</value>
+        <value>1958400</value>
+        <value>1728000</value>
+        <value>1574400</value>
+        <value>1497600</value>
+        <value>1267200</value>
+        <value>1190400</value>
+        <value>1036800</value>
+        <value>960000</value>
+        <value>883200</value>
+        <value>729600</value>
+        <value>652800</value>
+        <value>422400</value>
+        <value>300000</value>
+    </array>
+    <item name="cpu.idle">5</item>
+    <item name="cpu.awake">20.7</item>
+    <array name="cpu.active">
+        <value>433</value>
+        <value>387</value>
+        <value>348</value>
+        <value>313</value>
+        <value>265</value>
+        <value>232</value>
+        <value>213</value>
+        <value>203</value>
+        <value>176</value>
+        <value>132</value>
+        <value>122</value>
+        <value>114</value>
+        <value>97</value>   
+        <value>74</value>
+        <value>56</value>
+        <value>42</value>
+        <value>34</value>
+    </array>
     <item name="battery.capacity">3000</item>
+    <array name="wifi.batchedscan">
+        <value>.0002</value>
+        <value>.002</value>
+        <value>.02</value>
+        <value>.2</value>
+        <value>2</value>
+    </array>
 </device>
